--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Product Search</title>
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-      }
-      #root {
-        min-height: 100%;
-      }
-    </style>
+    <title>%VITE_PROJECT_NAME%</title>
   </head>
   <body>
     <div id="root"></div>
